re PR target/82848 (ICE in expand_expr_real_2, at expr.c:8715)

PR target/82848
	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Don't fold
	builtins not enabled in the currently selected ISA.

	* gcc.target/powerpc/pr82848.c: New test.

From-SVN: r255148